# cloudpredict

./: LICENSE  README.md  pyproject.toml  requirements.txt
app/: logging_config.py  main.py  metrics.py  predict.py
docker/: Dockerfile.api  docker-compose.yml
k8s/: namespace.yaml
k8s/api/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
k8s/db/: postgres-deployment.yaml  postgres-pv.yaml  postgres-service.yaml  redis-deployment.yaml  redis-service.yaml
ml/: evaluate.py  train.py
tests/: test_api.py  test_predict.py
