[project]
name = "cloudpredict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "appdirs==1.4.4",
    "attrs==26.1.0",
    "blinker==1.9.0",
    "cachetools==7.0.5",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "coverage==7.13.5",
    "cryptography==46.0.7",
    "cycler==0.12.1",
    "databricks-sdk==0.102.0",
    "deprecation==2.1.0",
    "distro==1.9.0",
    "docker==7.1.0",
    "dynaconf==3.2.13",
    "evidently==0.7.21",
    "faker==40.13.0",
    "fastapi==0.135.3",
    "filelock==3.25.2",
    "flask==3.1.3",
    "flask-cors==6.0.2",
    "fonttools==4.62.1",
    "frozenlist==1.8.0",
    "fsspec==2026.3.0",
    "gitdb==4.0.12",
    "gitpython==3.1.46",
    "google-auth==2.49.1",
    "graphene==3.4.3",
    "graphql-core==3.2.8",
    "graphql-relay==3.2.0",
    "greenlet==3.4.0",
    "gunicorn==25.3.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "huey==2.6.0",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "iniconfig==2.3.0",
    "iterative-telemetry==0.0.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "kiwisolver==1.5.0",
    "litestar==2.21.1",
    "litestar-htmx==0.5.0",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mdurl==0.1.2",
    "mlflow==3.11.1",
    "mlflow-skinny==3.11.1",
    "mlflow-tracing==3.11.1",
    "msgspec==0.21.0",
    "multidict==6.7.1",
    "multipart==1.3.1",
    "mypy-extensions==1.1.0",
    "nltk==3.9.4",
    "numpy==2.4.4",
    "opentelemetry-api==1.40.0",
    "opentelemetry-proto==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-semantic-conventions==0.61b0",
    "packaging==26.0",
    "pandas==2.3.3",
    "patsy==1.0.2",
    "pillow==12.2.0",
    "plotly==5.24.1",
    "pluggy==1.6.0",
    "polyfactory==3.3.0",
    "prettytable==3.17.0",
    "prometheus-client==0.24.1",
    "propcache==0.4.1",
    "protobuf==6.33.6",
    "pyarrow==23.0.1",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "pytest==8.3.4",
    "pytest-cov==7.1.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pytz==2026.1.post1",
    "pywin32==311",
    "pyyaml==6.0.3",
    "redis==7.4.0",
    "regex==2026.4.4",
    "requests==2.33.1",
    "rich==14.3.3",
    "rich-click==1.9.7",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "skops==0.13.0",
    "smmap==5.0.3",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.49",
    "sqlparse==0.5.5",
    "starlette==1.0.0",
    "statsmodels==0.14.6",
    "tenacity==9.1.4",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.3",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.1",
    "ujson==5.12.0",
    "urllib3==2.6.3",
    "uuid6==2025.0.1",
    "uvicorn==0.44.0",
    "waitress==3.0.2",
    "watchdog==6.0.0",
    "watchfiles==1.1.1",
    "wcwidth==0.6.0",
    "websockets==16.0",
    "werkzeug==3.1.8",
    "yarl==1.23.0",
    "zipp==3.23.0",
]
